# feature-extractor-MBO-LOB

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEBASE.md  Cargo.toml  DATAFLOW_VISUALIZATION.md  EXPORT_INDEX.md  LICENSE  README.md  RESEARCH_GAPS.md  TODO.md  build.rs  calibration_nvda.json
.github/workflows/: ci.yml  integration.yml  security.yml
benches/: feature_extraction.rs
configs/: e3_ic_gate.toml  nvda_116feat_full_analysis.toml  nvda_11month_complete.toml  nvda_11month_triple_barrier.toml  nvda_11month_triple_barrier_calibrated.toml  nvda_11month_triple_barrier_volscaled.toml  nvda_84feat_baseline.toml  nvda_98feat.toml  nvda_98feat_full.toml  nvda_98feat_v2.toml  nvda_arcx_128feat_full.toml  nvda_arcx_128feat_regression_finegrain.toml  nvda_arcx_98feat.toml  nvda_arcx_98feat_multi_horizon.toml  nvda_balanced.toml  nvda_bigmove_detection.toml  nvda_extended_multi_horizon.toml  nvda_multi_horizon.toml  nvda_spread_adaptive.toml  nvda_tlob_raw_v2.toml  nvda_tlob_repo_v1.toml  nvda_tlob_repo_v2.toml  nvda_triple_barrier.toml  nvda_xnas_128feat_full.toml  nvda_xnas_128feat_opportunity.toml  nvda_xnas_128feat_profit_threshold.toml  nvda_xnas_128feat_regression.toml  nvda_xnas_128feat_regression_finegrained.toml  nvda_xnas_128feat_regression_fwd_prices.toml  nvda_xnas_128feat_regression_pointreturn.toml  nvda_xnas_kolm_of_regression.toml  template_multi_symbol.toml
configs/examples/: nvda_tlob_raw.toml  nvda_tlob_repo.toml
docs/: CONFIG_REFERENCE.md  FEATURE_REFERENCE.md  LABELING_STRATEGIES.md  TEST_INVENTORY.md  USAGE_GUIDE.md  full-data-pipeline.md
examples/: basic_extraction.rs  benchmark_parallel.rs  benchmark_sampling.rs  builder_validation.rs  full_pipeline.rs  normalization.rs  parallel_batch.rs  performance_experiment.rs  sequence_builder.rs  validate_hft_labeling.rs  validate_lob_features.rs  validate_mbo_features.rs  validate_nvda_labeling.rs  validate_sequence_builder.rs  volume_sampling.rs
src/: batch.rs  builder.rs  config.rs  contract.rs  error.rs  export.rs  export_aligned.rs  lib.rs  pipeline.rs  prelude.rs  validation.rs
src/export/: dataset_config.rs  mod.rs  tensor_format.rs
src/export/config/: features.rs  labels.rs  mod.rs  normalization.rs  processing.rs  sampling.rs  sequence.rs  symbol.rs
src/export/config/labels/: common.rs  mod.rs  opportunity.rs  regression.rs  strategy.rs  tests.rs  threshold.rs  tlob.rs  triple_barrier.rs
src/export_aligned/: alignment.rs  metadata.rs  mod.rs  normalization.rs  npy_export.rs  types.rs  validation.rs
src/export_aligned/strategies/: mod.rs  opportunity.rs  regression.rs  tlob.rs  triple_barrier.rs
src/features/: config.rs  derived_features.rs  extractor.rs  fi2010.rs  lob_features.rs  market_impact.rs  mbo_features.rs  mod.rs  order_flow.rs  signals.rs
src/features/experimental/: institutional_v2.rs  kolm_of.rs  mlofi.rs  mod.rs  seasonality.rs  volatility.rs
src/features/mbo_features/: event.rs  flow_features.rs  institutional_features.rs  lifecycle_features.rs  mod.rs  order_tracker.rs  queue_features.rs  size_features.rs  window.rs
src/features/signals/: book_valid.rs  compute.rs  indices.rs  mod.rs  ofi.rs  time_regime.rs
src/labeling/: deeplob.rs  magnitude.rs  mod.rs  multi_horizon.rs  opportunity.rs  tlob.rs  triple_barrier.rs
src/preprocessing/: adaptive_sampling.rs  mod.rs  normalization.rs  sampling.rs  volatility.rs
src/schema/: feature_def.rs  mod.rs  presets.rs
src/sequence_builder/: builder.rs  horizon_aware.rs  mod.rs  multiscale.rs
tests/: aligned_exporter_tests.rs  comprehensive_validation.rs  contract_validation_test.rs  dataset_config_integration.rs  export_roundtrip.rs  export_tests.rs  fair_validation_with_warnings.rs  feature_count_validation.rs  golden_snapshot.rs  granular_mbo_mbp_validation.rs  integration_tests.rs  labeling_tests.rs  mbo_features_real_data_validation.rs  mbp_mbo_validation.rs  multi_horizon_label_tests.rs  multiscale_reset_leak_test.rs  multiscale_streaming_test.rs  normalization_integration_tests.rs  opportunity_labeling_tests.rs  outlier_investigation.rs  parallel_processing_tests.rs  phase1_tests.rs  phase3_real_data_validation.rs  pipeline_integration_tests.rs  pipeline_refactoring_tests.rs  pipeline_tests.rs  real_data_validation.rs  real_nvidia_validation.rs  sampling_integration_tests.rs  sampling_interval_units_test.rs  sign_convention_validation.rs  signal_extraction_test.rs  signal_layer_comprehensive_validation.rs  signal_layer_integration.rs  signal_level_validation_test.rs  source_abstraction_tests.rs  state_leak_comprehensive_test.rs  state_leak_test.rs  tick_size_mbo_test.rs  tick_size_propagation_test.rs  (+2 more)
tests/common/: assertions.rs  fixtures.rs  mod.rs
tests/fixtures/: golden_feb3_100.json  golden_feb3_500.json  pipeline_contract.toml
tools/: calibrate_triple_barrier.py  export_dataset.rs  export_nvidia_dataset.rs  export_nvidia_dataset_aligned.rs
